# JM3D

./: README.md  ScanObjectNN.yaml  Test.py  dataset_catalog.json  main.py
JM3D-LLM/: README.md  pyproject.toml
JM3D-LLM/llava/: constants.py  mm_utils.py
JM3D-LLM/llava/eval/: run_llava_pc.py
JM3D-LLM/llava/model/: builder.py  llava.py
JM3D-LLM/llava/model/multimodal_encoder/: builder.py
JM3D-LLM/llava/model/multimodal_encoder/pointmlp/: pointMLP.py
JM3D-LLM/llava/train/: llava_trainer.py  train.py
JM3D-LLM/scripts/: pretrain_pc.sh  test_pretrain_pc.sh
data/: ShapeNet_Class2Labels.json  ShapeNet_Label2Names.json  ShapeNet_all.csv  ShapeNet_test.csv  ShapeNet_train.csv  dataset_3d.py  labels.json  val_shape_name.json
models/: ULIP_models.py  losses.py
scripts/: pretrain_pointbert.sh  pretrain_pointmlp.sh  pretrain_pointnet2_ssg.sh  test_pointbert.sh  test_pointmlp.sh  test_pointnet2_ssg.sh
