[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llava"
version = "0.1.0"
description = "Towards GPT-4 like large language and 3D visual assistant."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "accelerate", "einops", "fastapi", "gradio==3.23", "markdown2[all]", "numpy",
    "requests", "sentencepiece", "tokenizers==0.12.1",
    "torch", "torchvision", "uvicorn", "wandb",
    "transformers @ git+https://github.com/huggingface/transformers.git@cae78c46"
]

[project.urls]
"Homepage" = "https://https://github.com/Mr-Neko/JM3D"
"Bug Tracker" = "https://https://github.com/Mr-Neko/JM3D/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
